fix routing issues on mobile

--- a/project-draft/css/style.css
+++ b/project-draft/css/style.css
@@ -595,7 +595,8 @@ footer {
 
 
     h1.rqh1 {
-        color: white;
+        color: #8F5EB1;
+        text-align: center;
     }
 
     body .incoming {
